--- a/public/css/flaticon-font/_flaticon.scss
+++ b/public/css/flaticon-font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 21/08/2020 02:53
+    Creation date: 15/09/2020 09:54
     */
 
     @font-face {
@@ -37,22 +37,30 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-bar-chart:before { content: "\f100"; }
-.flaticon-bill:before { content: "\f101"; }
-.flaticon-bill-1:before { content: "\f102"; }
-.flaticon-paper:before { content: "\f103"; }
-.flaticon-undo:before { content: "\f104"; }
-.flaticon-transfer:before { content: "\f105"; }
-.flaticon-register:before { content: "\f106"; }
-.flaticon-forgot:before { content: "\f107"; }
-.flaticon-add:before { content: "\f108"; }
+    .flaticon-team:before { content: "\f100"; }
+.flaticon-marketing:before { content: "\f101"; }
+.flaticon-dropper:before { content: "\f102"; }
+.flaticon-doctor:before { content: "\f103"; }
+.flaticon-register:before { content: "\f104"; }
+.flaticon-question-mark:before { content: "\f105"; }
+.flaticon-poster:before { content: "\f106"; }
+.flaticon-ads:before { content: "\f107"; }
+.flaticon-advertising:before { content: "\f108"; }
+.flaticon-bill:before { content: "\f109"; }
+.flaticon-license-plate:before { content: "\f10a"; }
+.flaticon-question:before { content: "\f10b"; }
+.flaticon-recycle:before { content: "\f10c"; }
     
-    $font-Flaticon-bar-chart: "\f100";
-    $font-Flaticon-bill: "\f101";
-    $font-Flaticon-bill-1: "\f102";
-    $font-Flaticon-paper: "\f103";
-    $font-Flaticon-undo: "\f104";
-    $font-Flaticon-transfer: "\f105";
-    $font-Flaticon-register: "\f106";
-    $font-Flaticon-forgot: "\f107";
-    $font-Flaticon-add: "\f108";
+    $font-Flaticon-team: "\f100";
+    $font-Flaticon-marketing: "\f101";
+    $font-Flaticon-dropper: "\f102";
+    $font-Flaticon-doctor: "\f103";
+    $font-Flaticon-register: "\f104";
+    $font-Flaticon-question-mark: "\f105";
+    $font-Flaticon-poster: "\f106";
+    $font-Flaticon-ads: "\f107";
+    $font-Flaticon-advertising: "\f108";
+    $font-Flaticon-bill: "\f109";
+    $font-Flaticon-license-plate: "\f10a";
+    $font-Flaticon-question: "\f10b";
+    $font-Flaticon-recycle: "\f10c";
